{
    "name": "Input",
    "maps": [
        {
            "name": "Build Actions",
            "id": "d9690e7c-a164-4e16-a9d4-a530d8555401",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2d6a1d14-b0f5-480e-aee5-b28b8fa841a6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "9231706b-021b-4249-9ba7-91f7ad432ece",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateObjectRight",
                    "type": "PassThrough",
                    "id": "771063d9-9e57-4881-b0a2-0e23b1a550ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateObjectLeft",
                    "type": "PassThrough",
                    "id": "ee542ce1-9a0b-4aaa-a80c-99a006f653a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "8856f9ed-d751-4abf-999b-db39e3151655",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "bb60c0ea-a861-4220-b179-4c8274804ee5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateCameraButton",
                    "type": "PassThrough",
                    "id": "05f0b0a0-bca5-4f45-87a5-9e7c1aecb549",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "e4eb2718-cc8e-4c39-8d47-e5c37a2fbf6c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "e5924377-0398-4aec-8eba-50b5a3252d2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f362bb3-31e6-462e-b1ff-fbf715c799d9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee0e08c4-9f3a-4a2f-ad96-9c6603741b98",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc65b53c-f00d-474b-a24a-2bd597fa810e",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "RotateObjectRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "3e48c956-a11f-4bc8-a4dc-ed256c074ad3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dba0ab37-d50a-4d97-b903-490aae0b0e83",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1a3cf64e-2014-4658-935b-d7a9b0fde9de",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e9a88e8-98af-4bbd-b243-6aac6c2a8f5a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a7282671-fe81-4eab-9f0d-f2aec0b27d0f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow keys",
                    "id": "58b3282a-eb86-43c7-be44-eac2dab20606",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "448af2e8-3e29-48f6-abb2-a3b5891813dd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9f9e490c-f430-49ee-8130-316011f0242a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5a6f6005-27d8-4f33-bf5a-3f6dffef58c1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "766cd0fb-d47e-47b3-a279-d4d123ad0920",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c1df9463-a1cf-4e58-be4d-0925b2bd3470",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=15,y=15)",
                    "groups": "Keyboard_Mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67cf3bb3-61a7-4bbe-a973-a6b778b88f8d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "RotateObjectLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa5091ac-82fc-4be4-8007-b312ac7cd291",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "RotateCameraButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e52909e4-7aba-489a-8e8c-6af764a95fd1",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "e7dc018f-61e5-4e8b-9ace-eb1c5105c3a2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0f45b516-c3f3-4175-94d7-11051e67160b",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "752a7a3e-a29d-40d9-87c7-f33182e6be30",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard_Mouse",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard_Mouse",
            "bindingGroup": "Keyboard_Mouse",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}